--- a/FrontEnd/DishDash/src/app/Components/navigation/navigation.component.html
+++ b/FrontEnd/DishDash/src/app/Components/navigation/navigation.component.html
@@ -1,5 +1,6 @@
-
 <app-navbar></app-navbar>
 <app-loadingbar></app-loadingbar>
-<router-outlet></router-outlet>
+<div class="main-content">
+  <router-outlet></router-outlet>
+</div>
 <app-footer></app-footer>
