--- a/FrontEnd/DishDash/src/app/Components/restaurant/restaurant.component.html
+++ b/FrontEnd/DishDash/src/app/Components/restaurant/restaurant.component.html
@@ -1,30 +1,22 @@
-<div class="resBox p-5" *ngIf="restaurants.length !==0">
-    <div class="headline">
-        <h3>Best Restaurant In {{city}}</h3>
+<div class="resBox p-5">
+  <div *ngIf="restaurants.length !== 0" class="content">
+    <div class="restaurants row gap-4 p-3 justify-content-center">
+      <div class="card col-12 col-md-5 col-lg-3 mb-4" *ngFor="let restaurant of restaurants | paginate: { itemsPerPage: itemsPerPage, currentPage: p }">
+        <app-restaurantcard [onerestaurant]="restaurant"></app-restaurantcard>
+      </div>
     </div>
 
-    <!-- <app-spinner *ngIf="loadingService.getSpinnerVisible()"></app-spinner> -->
-
-    <div class="restaurants flex gap-4 p-3 justify-content" >
-
-       
-        <div class="card" *ngFor="let restaurant of restaurants | paginate:{itemsPerPage:itemsPerPage, currentPage:p}">
-            <app-restaurantcard [onerestaurant] = "restaurant"></app-restaurantcard>
-        </div>
-    </div>
     <div class="controls text-center m-3">
-        
-        <pagination-controls (pageChange)="p = $event"></pagination-controls>
+      <pagination-controls (pageChange)="p = $event" class="pagination"></pagination-controls>
     </div>
+  </div>
 
-    <!-- <div class="text-center" *ngIf="restaurants.length == 0 || restaurants == undefined">
-    <h1>No Restaurant In Your City</h1></div> -->
-</div>
+  <div class="text-center p-5" *ngIf="noRestuarant">
+    <h3 class="text-info-emphasis">Sorry, No Restaurant In Your City</h3>
+    <p>We are working hard to bring DishDash to your city</p>
+  </div>
 
-<div class="text-center p-5" *ngIf="noRestuarant">
-<h3 class="text-info-emphasis">Sorry, No Restaurant In Your City</h3>
-<p>We are working hard to brin dishdash to your city</p>
-</div>
-<div class="spinner flex justify-content-center " *ngIf="spinnerVisible">
-    <mat-spinner ></mat-spinner>
+  <div class="spinner-container" *ngIf="spinnerVisible">
+    <mat-spinner></mat-spinner>
+  </div>
 </div>
