--- a/FrontEnd/DishDash/src/app/Components/edit-profile/edit-profile.component.css
+++ b/FrontEnd/DishDash/src/app/Components/edit-profile/edit-profile.component.css
@@ -1,30 +1,33 @@
 .container {
-    max-width: 600px;
-    margin: auto;
-    padding: 15px;
-    border: 1px solid #ccc;
-    border-radius: 10px;
-    background-color: #f8f9fa;
-  }
-  
-  .form-group {
-    margin-bottom: 1rem;
-  }
-  
-  .full-width {
-    width: 100%;
-  }
-  
-  .error {
-    color: red;
-    font-size: 0.875rem;
-  }
-  
-  .text-center {
-    text-align: center;
-  }
-  
-  .text-success {
-    color: #286ca7;
-  }
-  
+  max-width: 600px;
+  margin: auto;
+  padding: 30px;
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  background-color: #f8f9fa;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.mat-form-field {
+  margin-bottom: 1rem;
+}
+
+.error {
+  color: red;
+  font-size: 0.875rem;
+}
+
+.btn-primary {
+  background-color: #007bff;
+  border-color: #007bff;
+}
+
+.btn-primary:hover {
+  background-color: #0056b3;
+  border-color: #0056b3;
+}
+
+.spinner {
+  height: 80vh;
+  align-items: center;
+}
