--- a/FrontEnd/DishDash/src/app/Components/loadingbar/loadingbar.component.html
+++ b/FrontEnd/DishDash/src/app/Components/loadingbar/loadingbar.component.html
@@ -1,5 +1,6 @@
-
-<mat-progress-bar class="loading"  mode="determinate" [value]="progress" *ngIf="isLoading" ></mat-progress-bar>
-
-
-
+<mat-progress-bar
+  class="loading-bar"
+  mode="determinate"
+  [value]="progress"
+  *ngIf="isLoading"
+></mat-progress-bar>
