--- a/FrontEnd/DishDash/src/app/Components/login/login.component.html
+++ b/FrontEnd/DishDash/src/app/Components/login/login.component.html
@@ -1,19 +1,16 @@
-<div class=" header flex justify-content-between align-items">
+<div class="header flex justify-content-end align-items-center">
   <button mat-icon-button class="close-button" (click)="closeDialoge()">
     <mat-icon>close</mat-icon>
   </button>
 </div>
 
-
-<!-- <div mat-dialog-content> -->
-
 <div class="loginform p-5">
-  <form #loginform = "ngForm" ngNativeValidate (ngSubmit)="loginUser(userlogin)">
+  <form #loginform="ngForm" ngNativeValidate (ngSubmit)="loginUser(userlogin)">
 
     <div *ngIf="errorMessage" class="alert alert-danger">{{errorMessage}}</div>
+
     <!-- Email input -->
-    <div data-mdb-input-init class="form-outline mb-4">
-      <label class="form-label" for="email">Email address</label>
+    <div class="form-outline mb-4">
       <input
         type="email"
         id="email"
@@ -22,13 +19,12 @@
         [(ngModel)]="userlogin.customerEmail"
         #customerEmail="ngModel"
         required
+        placeholder="Email address"
       />
-    
     </div>
 
     <!-- Password input -->
-    <div data-mdb-input-init class="form-outline mb-4">
-      <label class="form-label" for="password">Password</label>
+    <div class="form-outline mb-4">
       <input
         type="password"
         id="password"
@@ -37,12 +33,12 @@
         [(ngModel)]="userlogin.customerPassword"
         #customerPassword="ngModel"
         required
+        placeholder="Password"
       />
-   
     </div>
 
+    <!-- Submit button -->
     <div class="button">
-      <!-- Submit button -->
       <button
         type="submit"
         class="btn btn-primary btn-block mb-4"
@@ -50,17 +46,16 @@
       >
         Sign in
       </button>
-
     </div>
 
+    <!-- Spinner -->
     <div class="spinner flex justify-content-center" *ngIf="isLoadingSpinner">
       <mat-spinner></mat-spinner>
     </div>
 
-    <!-- Register buttons -->
+    <!-- Register link -->
     <div class="text-center">
       <p>Not a member? <a class="pointer" (click)="openRegister()">Register</a></p>
     </div>
   </form>
 </div>
-<!-- </div> -->
