--- a/FrontEnd/DishDash/src/app/Components/profile/profile.component.html
+++ b/FrontEnd/DishDash/src/app/Components/profile/profile.component.html
@@ -1,42 +1,49 @@
-
-<div class="welcome p-3 bg-black position-relative">
-    <img id="profileImage" class="profile rounded-circle" src="https://via.placeholder.com/100x100" alt="Profile Image">
-    <input type="file" id="fileInput" (change)="onFileSelected($event)" style="display:none;">
-    <i class="fas fa-camera camera-icon text-white mt-4" (click)="triggerFileInput()"></i>
-    <h2 class="mt-1 text-white">Welcome, <span class="fst-italic fw-bold text-danger">{{activeCustomer.customerName}}</span></h2>
-</div>
-
-
-<div class="profilediv flex ">
-
-    <div class="left w-30 p-3  pt-4 pb-4 bg-body-secondary">
-        <div class="profileInfo">
-            <h6 >PROFILE</h6>
-            <div class="item fs-3 flex flex-column gap-3">
-                <div class="favorites bg-white p-2 pointer" routerLink="favorites">Favorites</div>
-                <div class="editProfile bg-white p-2 pointer" routerLink="edit-profile">Edit Profile</div>
-            </div>
-        </div>
-
-        <div class="orderOnline mt-5">
-            <h6>ONLINE ORDEREING</h6>
-            <div class="item   fs-3 flex flex-column gap-3">
-                <div class="editProfile bg-white p-2 pointer" routerLink="order-history">Order History</div>
-                <div class="favorites bg-white p-2 pointer" routerLink="my-addresses">My Addresses</div>
-            </div>
-        </div>
-
-        <div class="orderOnline mt-5">
-            <h6>ACCOUNT SETTINGS</h6>
-            <div class="item   fs-3 flex flex-column gap-3">
-                <div class="editProfile bg-white p-2 pointer" (click)="logout()">Logout</div>
-            </div>
-        </div>
-        
+<div class="profile-container container mt-5">
+    <!-- Profile Header Section -->
+    <div class="welcome text-center p-4 bg-dark text-white position-relative rounded">
+      <img id="profileImage" class="profile rounded-circle" src="https://via.placeholder.com/100x100" alt="Profile Image">
+      <input type="file" id="fileInput" (change)="onFileSelected($event)" style="display:none;">
+      <i class="fas fa-camera camera-icon position-absolute" (click)="triggerFileInput()"></i>
+      <h2 class="mt-3">Welcome, <span class="fst-italic fw-bold text-warning">{{activeCustomer.customerName}}</span></h2>
     </div>
-
-    <div class="right w-100">
-       <router-outlet></router-outlet>
-
+  
+    <!-- Profile Navigation Section -->
+    <div class="profile-nav mt-5">
+      <div class="row">
+        <div class="col-md-4 col-lg-3">
+          <div class="card shadow-sm">
+            <div class="card-body">
+              <h5 class="card-title">Profile</h5>
+              <ul class="list-group list-group-flush">
+                <li class="list-group-item pointer" routerLink="favorites">Favorites</li>
+                <li class="list-group-item pointer" routerLink="edit-profile">Edit Profile</li>
+              </ul>
+            </div>
+          </div>
+          <div class="card shadow-sm mt-4">
+            <div class="card-body">
+              <h5 class="card-title">Online Ordering</h5>
+              <ul class="list-group list-group-flush">
+                <li class="list-group-item pointer" routerLink="order-history">Order History</li>
+                <li class="list-group-item pointer" routerLink="my-addresses">My Addresses</li>
+              </ul>
+            </div>
+          </div>
+          <div class="card shadow-sm mt-4">
+            <div class="card-body">
+              <h5 class="card-title">Account Settings</h5>
+              <ul class="list-group list-group-flush">
+                <li class="list-group-item pointer" (click)="logout()">Logout</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-8 col-lg-9">
+          <div class="content-area">
+            <router-outlet></router-outlet>
+          </div>
+        </div>
+      </div>
     </div>
-</div>
+  </div>
+  
