--- a/FrontEnd/DishDash/src/app/Components/restaurantview/restaurantview.component.html
+++ b/FrontEnd/DishDash/src/app/Components/restaurantview/restaurantview.component.html
@@ -1,73 +1,77 @@
-<div class="restaurantbox" *ngIf="oneRestaurant">
-    <div class="infobox bg-light p-3 m-3">
-        <div class="photos flex">
-            <img alt="Restaurant" *ngFor="let x of oneRestaurant.resImages" [src]="x">
-
+<div class="restaurant-container">
+    <!-- Restaurant Header Section -->
+    <div class="restaurant-header">
+      <div id="restaurantImagesCarousel" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-inner">
+          <div *ngFor="let x of oneRestaurant.resImages; let i = index" [class]="i === 0 ? 'carousel-item active' : 'carousel-item'">
+            <img [src]="x" class="d-block w-100" alt="Restaurant Image">
+          </div>
         </div>
-        <div class="descriptionbox flex justify-content-between">
-            <div class="left">
-                <h2 >{{oneRestaurant.resName}}</h2>
-                <p>{{oneRestaurant.resCuisines}}</p>
-                <span>{{oneRestaurant.resAddress}}</span>
-            </div>
-            <div class="right flex ">
-
-                <span>{{oneRestaurant.resRating}}</span>
-                <mat-icon class="fav" [fontIcon]="isFavorite ? 'favorite':'favorite_border'" (click)="toogleFav()" ></mat-icon>
-            </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#restaurantImagesCarousel" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#restaurantImagesCarousel" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+      <div class="restaurant-info">
+        <h1>{{ oneRestaurant.resName }}</h1>
+        <p class="cuisines">{{ oneRestaurant.resCuisines.join(', ') }}</p>
+        <p class="address">{{ oneRestaurant.resAddress }}</p>
+        <p class="description">{{ oneRestaurant.resDescription }}</p>
+        <div class="rating-favorite">
+          <span class="badge bg-success">{{ oneRestaurant.resRating }}</span>
+          <mat-icon class="fav" [class.favorited]="isFavorite" [fontIcon]="isFavorite ? 'favorite' : 'favorite_border'" (click)="toggleFav()"></mat-icon>
         </div>
+      </div>
     </div>
-
-    <div class="menubox bg-light flex p-3 m-3">
-        <div class="menuleft bg-danger-subtle p-3">
-
-            <p class="pointer" *ngFor="let category of categoryArray" (click)="scrollToCateogry(category[0])">{{category[0]}} ({{category[1]}})</p>
+  
+    <!-- Categories and Menu Section -->
+    <div class="menu-section">
+      <div class="categories">
+        <h2>Categories</h2>
+        <div *ngFor="let category of categoryArray" class="category-item pointer" (click)="scrollToCategory(category[0])">
+          {{ category[0] }} ({{ category[1] }})
         </div>
-
-        <div class="menuright">
-            <div class="menuitem bg-body-secondary flex p-2 m-2 mb-3 gap-3" *ngFor="let category of categoryWiseDishesArray">
-                <div class="wholeCategory" id="{{category[0]}}">
-                    <div class="headine">
-                        <h4>{{category[0]}}</h4>
-                    </div>
-
-                    <div class="menuItems">
-                        <div class="oneItem flex p-2 m-2 gap-3 bg-body-tertiary" *ngFor="let item of category[1]">
-
-                            <div class="part1">
-                                <img [src]="item.dishImage" alt="">
-                            </div>
-                            <div class="part2">
-                                <h5 class="m-0">{{item.dishName}}</h5>
-                                <p class="m-0">{{item.dishRating}} people rated</p>
-                                <p class="m-0">Rs {{item.dishPrice}}/-</p>
-                                <span class="m-0">{{item.dishDescription}}</span>
-
-                                <div class="counters flex ">
-                                    <button class="w-25" (click)="decreseCount()">-</button>
-                                    <input title="Count" class="w-25 countInput" type="text" [(ngModel)]="counter">
-                                    <button class="w-25" (click)="increaseCount()">+</button>
-                                </div>
-                            </div>
-
-                        </div>
-
-                    </div>
+      </div>
+      <div class="menu-items">
+        <div *ngFor="let category of categoryWiseDishesArray" class="menu-category" id="{{ category[0] }}">
+          <h3>{{ category[0] }}</h3>
+          <div *ngFor="let item of category[1]" class="menu-item">
+            <div class="item-image">
+              <img [src]="item.dishImage" alt="{{ item.dishName }}">
+            </div>
+            <div class="item-info">
+              <h4>{{ item.dishName }}</h4>
+              <p class="rating">{{ item.dishRating }} people rated</p>
+              <p class="price">Rs {{ item.dishPrice }}/-</p>
+              <p class="description">{{ item.dishDescription }}</p>
+              <span class="badge" [ngClass]="item.veg ? 'bg-success' : 'bg-danger'">{{ item.veg ? 'Veg' : 'Non-Veg' }}</span>
+              <div class="add-to-cart">
+                <button class="btn btn-warning" (click)="increaseCount(item)">Add +</button>
+                <div class="quantity-controls" >
+                  <button class="btn btn-dark" (click)="decreaseCount(item)">-</button>
+                  <span>1</span>
+                  <button class="btn btn-dark" (click)="increaseCount(item)">+</button>
                 </div>
-               
-
+              </div>
             </div>
-
-            
+          </div>
         </div>
+      </div>
     </div>
-</div>
-
-<div class="spinner flex justify-content-center " *ngIf="spinnerVisible">
-    <mat-spinner ></mat-spinner>
-</div>
-
-<div class="noSuchRestaurant flex justify-content-center align-items p-5 flex-column" *ngIf="noSuchRestaurant">
-    <h2>No Such Restaurant.....</h2>
-    <a routerLink="/">Go To Home Page</a>
-</div>
+  
+    <!-- Spinner -->
+    <div class="spinner flex justify-content-center" *ngIf="spinnerVisible">
+      <mat-spinner></mat-spinner>
+    </div>
+  
+    <!-- No Such Restaurant -->
+    <div class="no-such-restaurant flex justify-content-center align-items-center flex-column mt-5" *ngIf="noSuchRestaurant">
+      <h2>No Such Restaurant.....</h2>
+      <a routerLink="/" class="btn btn-primary mt-3">Go To Home Page</a>
+    </div>
+  </div>
+  
