--- a/FrontEnd/DishDash/src/app/Components/search/search.component.css
+++ b/FrontEnd/DishDash/src/app/Components/search/search.component.css
@@ -1,44 +1,51 @@
 .main {
-    background-color: black;
-    color: white;
-    height: 40vh;
-    flex-direction: column;
-    /* background-image: url('../../../../Images/background.jpg'); */
+    background-color: #f5f5f5; /* Light gray background */
+    color: #333; /* Dark gray text */
+    height: 50vh;
     background-size: cover;
-    /* filter: blur(5px); */
-
-}
-.headline span {
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .headline h1 {
+    font-size: 2.5rem;
+    margin-bottom: 20px;
+  }
+  
+  .headline span {
     font-style: italic;
-    color: red;
-}
-
-.headline  h1{
-    font-size: 2.3em;
-}
-.searchbar {
+    color: #007bff; /* Primary blue color */
+  }
+  
+  .searchbar {
     gap: 10px;
-    height: 10vh;
-    /* border: 2px solid red; */
-    margin: 0;
-}
-.search, .button {
-    height: 80%;
-}
-.search input {
-    width: 50vw;
-    height: 100%;
+    width: 100%;
+    max-width: 800px;
+  }
+  
+  .search input {
+    width: 100%;
     padding: 10px;
     border-radius: 10px;
-    border: 0px;
-}
-
-.button button {
+    border: 1px solid #ccc;
+  }
+  
+  .button button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     height: 100%;
-    width: 100%;
-}
-.currentLocation {
-    font-size: 14px;
-    text-align: center;
-}
-
+  }
+  
+  .dropdown-menu {
+    max-height: 300px;
+    overflow-y: auto;
+  }
+  
+  .pointer {
+    cursor: pointer;
+  }
+  
