--- a/FrontEnd/DishDash/src/app/Components/search/search.component.html
+++ b/FrontEnd/DishDash/src/app/Components/search/search.component.html
@@ -1,35 +1,29 @@
-<div class="main flex justify-content align-items">
-
-    <div class="headline ">
-        <h1>Discover the best food & drinks in <span>{{city}}</span></h1>
+<div class="main flex justify-content-center align-items-center text-center">
+    <div class="headline">
+      <h1>Discover the best food & drinks in <span>{{city}}</span></h1>
     </div>
-
-    <div class="searchbar flex align-items m-3">
-
-        <div class="dropdown">
-            <button class="btn btn-secondary dropdown-toggle flex justify-content-around align-items-center" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                <mat-icon  aria-hidden="false" aria-label="Example home icon" fontIcon="location_on"></mat-icon> {{city}}
-            </button>
-            <ul class="dropdown-menu pt-0">
-                <li class="pointer currentLocation" (click)="selectCity(cityFromIp)">Current Location: {{cityFromIp}}</li>
-                <p class="bg-dark text-center text-white">Available Cities</p>
-              <li *ngFor="let rest of allUniqueCities" ><a class="dropdown-item" href="#" (click)="selectCity(rest)">{{rest}}</a></li>
-            </ul>
-          </div>
-      
-        <div class="search">
-            <input type="text" placeholder="Seach for restaurant, cuisine or a dish" [(ngModel)]="Search" (input)="onSearch()"></div>
-        <div class="button">
-            <button class="btn btn-danger" (click)="onSearch()">
-                <mat-icon  aria-hidden="false" aria-label="Example home icon" fontIcon="search"></mat-icon>
-                </button>
-        </div>
-        
-
+    <div class="searchbar flex flex-column flex-md-row align-items-center m-3">
+      <div class="dropdown mb-3 mb-md-0">
+        <button class="btn btn-primary dropdown-toggle d-flex justify-content-around align-items-center" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+          <mat-icon aria-hidden="false" aria-label="Location icon" fontIcon="location_on"></mat-icon> {{city}}
+        </button>
+        <ul class="dropdown-menu">
+          <li class="dropdown-header">Current Location: {{cityFromIp}}</li>
+          <li class="dropdown-divider"></li>
+          <li class="dropdown-header">Available Cities</li>
+          <li *ngFor="let rest of allUniqueCities">
+            <a class="dropdown-item pointer" href="#" (click)="selectCity(rest)">{{rest}}</a>
+          </li>
+        </ul>
+      </div>
+      <div class="search d-flex align-items-center flex-grow-1">
+        <input type="text" class="form-control" placeholder="Search for restaurant, cuisine or a dish" [(ngModel)]="Search" (input)="onSearch()" />
+      </div>
+      <div class="button ms-3">
+        <button class="btn btn-warning d-flex align-items-center" (click)="onSearch()">
+          <mat-icon aria-hidden="false" aria-label="Search icon" fontIcon="search"></mat-icon>
+        </button>
+      </div>
     </div>
-
-
-    
-
-
-</div>
+  </div>
+  
