--- a/FrontEnd/DishDash/src/app/Components/edit-profile/edit-profile.component.css
+++ b/FrontEnd/DishDash/src/app/Components/edit-profile/edit-profile.component.css
@@ -2,13 +2,18 @@
   max-width: 600px;
   margin: auto;
   padding: 30px;
-  border: 1px solid #ccc;
   border-radius: 10px;
   background-color: #f8f9fa;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
+.header {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
 .mat-form-field {
+  width: 100%;
   margin-bottom: 1rem;
 }
 
@@ -28,6 +33,23 @@
 }
 
 .spinner {
-  height: 80vh;
+  display: flex;
+  justify-content: center;
   align-items: center;
+  height: 80vh;
+}
+
+.update-message {
+  position: fixed;
+  top: 10%;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 1050;
+  transition: opacity 0.5s ease-in-out;
+}
+
+.form-field-container {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
