--- a/FrontEnd/DishDash/src/app/Components/profile/profile.component.css
+++ b/FrontEnd/DishDash/src/app/Components/profile/profile.component.css
@@ -50,6 +50,13 @@
   padding: 15px 20px;
   cursor: pointer;
   transition: background-color 0.3s ease;
+  display: flex;
+  align-items: center;
+}
+
+.list-group-item i {
+  margin-right: 10px;
+  color: #6c757d;
 }
 
 .list-group-item:hover {
