--- a/FrontEnd/DishDash/src/app/Components/restaurant/restaurant.component.css
+++ b/FrontEnd/DishDash/src/app/Components/restaurant/restaurant.component.css
@@ -46,7 +46,7 @@
     padding: 0.5rem 0.75rem;
     text-decoration: none;
     background-color: #fff;
-    border: 1px solid #ddd;
+    /* border: 1px solid #ddd; */
     border-radius: 0.25rem;
     transition: background-color 0.3s ease;
   }
