--- a/FrontEnd/DishDash/src/app/Components/navbar/navbar.component.css
+++ b/FrontEnd/DishDash/src/app/Components/navbar/navbar.component.css
@@ -11,7 +11,7 @@
 .nav-item .cart-dropdown {
   right: 0;
   top: 100%;
-  width: 300px;
+  width: 400px;
   border-radius: 5px;
   border: 1px solid #ddd;
   padding: 10px;
@@ -71,8 +71,30 @@
   opacity: 0;
   transition: opacity 0.3s ease-in-out;
 }
+
 .nav-item:hover .cart-dropdown,
 .nav-item .cart-dropdown:hover {
   visibility: visible;
   opacity: 1;
+}
+
+.dropdown-item {
+  display: flex;
+  align-items: center;
+}
+
+.dropdown-item mat-icon {
+  margin-right: 10px;
+}
+
+.nav-item.dropdown .nav-link,
+.nav-item .nav-link.d-flex {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+}
+
+.nav-item .nav-link.d-flex {
+  gap: 5px;
 }
