--- a/FrontEnd/DishDash/src/app/Components/myaddresses/myaddresses.component.html
+++ b/FrontEnd/DishDash/src/app/Components/myaddresses/myaddresses.component.html
@@ -10,36 +10,34 @@
         </mat-expansion-panel-header>
 
         <form [formGroup]="addressForm" (ngSubmit)="onSubmit()">
-          <mat-form-field class="w-100">
-            <mat-label>House No/Flat No/Area Name</mat-label>
-            <input matInput placeholder="House No/Flat No/Area Name" formControlName="address1">
-            <mat-error *ngIf="address1?.hasError('required')">Address Line 1 is required.</mat-error>
-          </mat-form-field>
+          <div class="form-row">
+            <mat-form-field class="w-100">
+              <mat-label>House No/Flat No/Area Name</mat-label>
+              <input matInput placeholder="House No/Flat No/Area Name" formControlName="address1">
+              <mat-error *ngIf="address1?.hasError('required')">Address Line 1 is required.</mat-error>
+            </mat-form-field>
 
-          <mat-form-field class="w-100">
-            <mat-label>Landmark</mat-label>
-            <input matInput placeholder="Landmark" formControlName="landMark">
-            <mat-error *ngIf="landmark?.hasError('required')">Landmark is required.</mat-error>
-          </mat-form-field>
+            <mat-form-field class="w-100">
+              <mat-label>Landmark</mat-label>
+              <input matInput placeholder="Landmark" formControlName="landMark">
+              <mat-error *ngIf="landmark?.hasError('required')">Landmark is required.</mat-error>
+            </mat-form-field>
+          </div>
 
-          <mat-form-field class="w-100">
-            <mat-label>City</mat-label>
-            <input matInput placeholder="City" formControlName="city">
-            <mat-error *ngIf="city?.hasError('required')">City is required.</mat-error>
-          </mat-form-field>
+          <div class="form-row">
+            <mat-form-field class="w-100">
+              <mat-label>City</mat-label>
+              <input matInput placeholder="City" formControlName="city">
+              <mat-error *ngIf="city?.hasError('required')">City is required.</mat-error>
+            </mat-form-field>
 
-          <mat-form-field class="w-100">
-            <mat-label>Pin Code</mat-label>
-            <input matInput placeholder="Pincode" formControlName="pincode">
-            <mat-error *ngIf="pincode?.hasError('required')">Pin Code is required.</mat-error>
-            <mat-error *ngIf="pincode?.hasError('pattern')">Pin Code must be 6 digits.</mat-error>
-          </mat-form-field>
-
-          <mat-form-field class="w-100">
-            <mat-label>Google Maps Location</mat-label>
-            <input matInput placeholder="Google Maps Location" formControlName="currentLocation">
-            <mat-error *ngIf="currentLocation?.hasError('required')">Current Location is required.</mat-error>
-          </mat-form-field>
+            <mat-form-field class="w-100">
+              <mat-label>Pin Code</mat-label>
+              <input matInput placeholder="Pincode" formControlName="pincode">
+              <mat-error *ngIf="pincode?.hasError('required')">Pin Code is required.</mat-error>
+              <mat-error *ngIf="pincode?.hasError('pattern')">Pin Code must be 6 digits.</mat-error>
+            </mat-form-field>
+          </div>
 
           <button class="btn btn-dark btn-block mb-3" type="submit" [disabled]="addressForm.invalid">Save Address</button>
         </form>
@@ -65,7 +63,7 @@
             <p class="card-text"><strong>City:</strong> {{ address.city }}</p>
             <p class="card-text"><strong>Landmark:</strong> {{ address.landMark }}</p>
             <p class="card-text"><strong>Pin Code:</strong> {{ address.pincode }}</p>
-            <p class="card-text"><strong>Location:</strong> {{ address.currentLocation }}</p>
+        
             <div class="d-flex justify-content-between align-items-center mt-3">
               <button *ngIf="!isFirst" mat-raised-button color="primary" class="btn btn-sm" (click)="primaryAddress(address)">Make Primary</button>
               <button mat-raised-button color="warn" class="btn btn-sm" (click)="deleteAddress(address.addressId)">Delete</button>
