--- a/FrontEnd/DishDash/src/app/Components/restaurantcard/restaurantcard.component.html
+++ b/FrontEnd/DishDash/src/app/Components/restaurantcard/restaurantcard.component.html
@@ -14,6 +14,6 @@
     <span class="rating">
       <mat-icon>star</mat-icon>{{onerestaurant.resRating}}
     </span>
-    <mat-icon class="heart-icon" [ngClass]="{'favorite': isFavorite}" (click)="toggleFavorite()">favorite</mat-icon>
+    <!-- <mat-icon class="heart-icon" [ngClass]="{'favorite': isFavorite}" (click)="toggleFavorite()">favorite</mat-icon> -->
   </div>
 </div>
