--- a/FrontEnd/DishDash/src/app/Components/navbar/navbar.component.html
+++ b/FrontEnd/DishDash/src/app/Components/navbar/navbar.component.html
@@ -1,7 +1,8 @@
 <div class="navbar navbar-expand-lg navbar-light bg-light fixed-top shadow-sm">
+ 
   <div class="container-fluid">
     <a class="navbar-brand" href="/">
-      <img src="MainLogo.png" alt="Logo" class="logo" />
+      <img src="../../../assets/MainLogo.png" alt="Logo" class="logo" />
     </a>
     <button
       class="navbar-toggler"
@@ -49,7 +50,8 @@
             Cart
           </a>
           <div class="cart-dropdown position-absolute bg-white shadow-sm" *ngIf="showCart">
-            <app-cart [cartId]="activeCustomer.customerCartId" (quantityChange)="noOfItemsChanges($event)"></app-cart>
+            <app-cart [cartId]="activeCustomer.customerCartId" (quantityChange)="noOfItemsChanges($event)">
+            </app-cart>
           </div>
         </li>
       </ul>
