--- a/FrontEnd/DishDash/src/app/Components/profile/profile.component.html
+++ b/FrontEnd/DishDash/src/app/Components/profile/profile.component.html
@@ -1,11 +1,16 @@
 <div class="profile-container container mt-5">
     <!-- Profile Header Section -->
+  <form [formGroup]="pictureForm" (ngSubmit)="onSubmit()">
     <div class="welcome text-center p-4 bg-dark text-white position-relative rounded">
       <img id="profileImage" class="profile rounded-circle" src="https://via.placeholder.com/100x100" alt="Profile Image">
-      <input type="file" id="fileInput" (change)="onFileSelected($event)" style="display:none;">
-      <i class="fas fa-camera camera-icon position-absolute" (click)="triggerFileInput()"></i>
+      <input type="file" id="fileInput" id="customerProfilePic"
+      class="form-control"
+      formControlName="customerProfilePic" (change)="onFileSelected($event)" >
+      <!-- <i class="fas fa-camera camera-icon position-absolute" (click)="triggerFileInput()"></i> -->
       <h2 class="mt-3">Welcome, <span class="fst-italic fw-bold text-warning">{{activeCustomer.customerName}}</span></h2>
+      <button mat-button type="submit">submit</button>
     </div>
+  </form>
   
     <!-- Profile Navigation Section -->
     <div class="profile-nav mt-5">
