--- a/FrontEnd/DishDash/src/app/Components/navbar/navbar.component.html
+++ b/FrontEnd/DishDash/src/app/Components/navbar/navbar.component.html
@@ -52,7 +52,7 @@
         <li class="nav-item position-relative" (mouseover)="showCart = true" (mouseleave)="showCart = false">
           <a class="nav-link d-flex align-items-center">
             <mat-icon class="cart-icon" [matBadge]="matBadge" matBadgeColor="warn">shopping_cart</mat-icon>
-            <span class="ms-1">Cart</span>
+            <span class="ms-1 pointer">Cart</span>
           </a>
           <div class="cart-dropdown position-absolute bg-white shadow-sm" *ngIf="showCart">
             <app-cart (quantityChange)="noOfItemsChanges($event)"></app-cart>
