--- a/FrontEnd/DishDash/src/app/Components/profile/profile.component.html
+++ b/FrontEnd/DishDash/src/app/Components/profile/profile.component.html
@@ -1,9 +1,10 @@
 <div class="profile-container container mt-5">
-    <!-- Profile Header Section -->
+  <!-- Profile Header Section -->
   <form [formGroup]="pictureForm" (ngSubmit)="onSubmit()">
-    <div class="welcome text-center p-4 bg-dark text-white position-relative rounded">
-      <img id="profileImage" class="profile rounded-circle" src="https://via.placeholder.com/100x100" alt="Profile Image">
-      <input type="file" id="fileInput" id="customerProfilePic"
+    <div id="profile-div" class="welcome text-center p-4 bg-dark text-white position-relative rounded">
+      <img id="profileImage" *ngIf="profilePicture" class="profile rounded-circle" src="{{url}}"  alt="Profile Image">
+      <img id="profileImage" *ngIf="!profilePicture" class="profile rounded-circle" src="https://via.placeholder.com/50x50"  alt="Profile Image">
+      <input placeholder="Upload your picture" type="file" id="fileInput" id="customerProfilePic"
       class="form-control"
       formControlName="customerProfilePic" (change)="onFileSelected($event)" >
       <!-- <i class="fas fa-camera camera-icon position-absolute" (click)="triggerFileInput()"></i> -->
@@ -11,44 +12,53 @@
       <button mat-button type="submit">submit</button>
     </div>
   </form>
-  
-    <!-- Profile Navigation Section -->
-    <div class="profile-nav mt-5">
-      <div class="row">
-        <div class="col-md-4 col-lg-3">
-          <div class="card shadow-sm">
-            <div class="card-body">
-              <h5 class="card-title">Profile</h5>
-              <ul class="list-group list-group-flush">
-                <li class="list-group-item pointer" routerLink="favorites">Favorites</li>
-                <li class="list-group-item pointer" routerLink="edit-profile">Edit Profile</li>
-              </ul>
-            </div>
-          </div>
-          <div class="card shadow-sm mt-4">
-            <div class="card-body">
-              <h5 class="card-title">Online Ordering</h5>
-              <ul class="list-group list-group-flush">
-                <li class="list-group-item pointer" routerLink="order-history">Order History</li>
-                <li class="list-group-item pointer" routerLink="my-addresses">My Addresses</li>
-              </ul>
-            </div>
-          </div>
-          <div class="card shadow-sm mt-4">
-            <div class="card-body">
-              <h5 class="card-title">Account Settings</h5>
-              <ul class="list-group list-group-flush">
-                <li class="list-group-item pointer" (click)="logout()">Logout</li>
-              </ul>
-            </div>
+
+  <!-- Profile Navigation Section -->
+  <div class="profile-nav mt-5">
+    <div class="row">
+      <div class="col-md-4 col-lg-3">
+        <div class="card shadow-sm">
+          <div class="card-body">
+            <h5 class="card-title">Profile</h5>
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item pointer" routerLink="favorites">
+                <i class="fas fa-heart me-2"></i>Favorites
+              </li>
+              <li class="list-group-item pointer" routerLink="edit-profile">
+                <i class="fas fa-user-edit me-2"></i>Edit Profile
+              </li>
+            </ul>
           </div>
         </div>
-        <div class="col-md-8 col-lg-9">
-          <div class="content-area">
-            <router-outlet></router-outlet>
+        <div class="card shadow-sm mt-4">
+          <div class="card-body">
+            <h5 class="card-title">Online Ordering</h5>
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item pointer" routerLink="order-history">
+                <i class="fas fa-history me-2"></i>Order History
+              </li>
+              <li class="list-group-item pointer" routerLink="my-addresses">
+                <i class="fas fa-map-marker-alt me-2"></i>My Addresses
+              </li>
+            </ul>
           </div>
+        </div>
+        <div class="card shadow-sm mt-4">
+          <div class="card-body">
+            <h5 class="card-title">Account Settings</h5>
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item pointer" (click)="logout()">
+                <i class="fas fa-sign-out-alt me-2"></i>Logout
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-8 col-lg-9">
+        <div class="content-area">
+          <router-outlet></router-outlet>
         </div>
       </div>
     </div>
   </div>
-  
+</div>
